# Sprit-mutil

./: .gitignore  .tarpaulin.toml  Cargo.toml  LICENSE  README.md  README.old.md  TESTING_STRATEGY.md  flake.nix  install.sh  pyproject.toml  test_2_agent_layout.sh  test_accessibility.sh  test_claude_commands.rs  test_github_packages_setup.sh  test_mouse_support.sh  test_send_feature.sh  test_send_working.sh
.cargo/: config.toml  config.toml.example
.claude/commands/: agents.md  broadcast.md  hey.md  status.md
.github/workflows/: ci.yml  publish-github-packages.yml  release.yml  test.yml
agents/: .gitignore  agents.yaml
agents/profiles/: profile1.sh  profile2.sh  profile3.sh  profile4.sh  profile5.sh
agents/scripts/: setup.sh
benches/: performance_benchmarks.rs
debug/: debug_tmux_test.rs  test_delivery_manual.rs
docs/: ACCESSIBILITY.md  CHANGELOG.md  CONFIGURATION_SCHEMA.md  GITHUB_PACKAGES.md  README.md  UPDATING.md  WORKFLOW.md  sprite.1
packaging/: PKGBUILD  README.md
scripts/: README.md  debug_tmux  debug_tmux.rs  install-uv.sh  install.sh  test_fixes.sh  test_script_template.sh
specs/001-multi-agent-toolkit/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-multi-agent-toolkit/checklists/: requirements.md
specs/001-multi-agent-toolkit/contracts/: cli-api.md
specs/002-slash-command-framework/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-slash-command-framework/checklists/: requirements.md
specs/002-slash-command-framework/contracts/: api.yaml
sprite_cli/: __init__.py  main.py
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  validation.rs
src/commands/: agents.rs  attach.rs  broadcast.rs  config.rs  help.rs  hey.rs  init.rs  kill.rs  mod.rs  remove.rs  send.rs  slash_status.rs  start.rs  status.rs  sync.rs  update.rs  warp.rs  zoom.rs
src/communication/: delivery.rs  mod.rs
src/models/: agent.rs  config.rs  mod.rs  session.rs
src/templates/: attach-session.sh  empty_agents.yaml  profile0.sh  profile1.sh  profile2.sh  profile3.sh  profile4.sh  setup.sh  start-agents.sh
src/utils/: accessibility.rs  communication.rs  completion.rs  git.rs  help.rs  logging.rs  mod.rs  project.rs  security.rs  session_recovery.rs  timeout.rs  tmux.rs  workspace.rs
test_edge_cases/: README.md  TEST_EXECUTION_SUMMARY.md  agent_workspace_tests.sh  comprehensive_edge_case_test.sh  config_loading_tests.sh  git_worktree_tests.sh  hey_command_comprehensive_test.sh  hey_command_test_simple.sh  hey_command_tests.sh  hey_final_test.sh  integration_tests.sh  run_all_tests.sh  simple_hey_test.md  tmux_session_tests.sh
test_edge_cases/common/: test_utils.sh
tests/: README.md  communication_commands_integration_test.rs  delivery_test.rs  hey_command_test.rs  init_workflow_test.rs  performance_requirements_test.rs  session_management_test.rs  t059_final_integration_test.rs  workspace_provisioning_test.rs
tests/common/: fixtures.rs  mod.rs  utils.rs
tests/e2e/: mod.rs
tests/integration/: hey_command_test.rs  init_workflow_test.rs  mod.rs
tests/mocks/: ai_framework_mocks.rs
tests/performance/: performance_requirements_test.rs
tests/unit/: cli_parsing_test.rs  config_test.rs  mod.rs
