[package]
name = "sprite"
version = "0.2.2"
edition = "2021"
description = "A robust command-line toolkit for managing multiple AI coding agents in isolated tmux sessions with comprehensive workspace management and health monitoring"
authors = ["hotaq hootoo2016@gmail.com"]
license = "MIT"
repository = "https://github.com/hotaq/Sprit-mutil"
homepage = "https://github.com/hotaq/Sprit-mutil"
documentation = "https://docs.rs/sprite"
readme = "README.md"
keywords = ["cli", "multi-agent", "ai", "tmux", "workspace"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.75"
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "agents/profiles/*.sh"
]

[[bin]]
name = "sprite"
path = "src/main.rs"

[lib]
name = "sprite"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
log = { version = "0.4", features = ["std"] }
pathdiff = "0.2"
reqwest = { version = "0.11", features = ["json", "blocking"] }
semver = "1.0"
sha2 = "0.10"
tempfile = "3.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
