[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sprite-multi-agent"
version = "0.1.0"
description = "A powerful CLI tool for managing multiple AI coding agents in isolated tmux sessions"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "hotaq", email = "hootoo2016@gmail.com"},
]
maintainers = [
    {name = "hotaq", email = "hootoo2016@gmail.com"},
]
keywords = ["cli", "multi-agent", "ai", "tmux", "workspace", "development"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/hotaq/Sprit-mutil"
Documentation = "https://docs.rs/sprite"
Repository = "https://github.com/hotaq/Sprit-mutil.git"
"Bug Tracker" = "https://github.com/hotaq/Sprit-mutil/issues"

[project.scripts]
sprite = "sprite_cli.main:main"

[tool.setuptools]
packages = ["sprite_cli"]

[tool.setuptools.package-data]
sprite_cli = ["install.sh", "README.md"]

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true

[tool.rye]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]